Fix: long author name breaks on small screen

--- a/components/comment/style/index.less
+++ b/components/comment/style/index.less
@@ -32,6 +32,7 @@
 
     &-author {
       display: flex;
+      flex-wrap: wrap;
       justify-content: flex-start;
       margin-bottom: 4px;
       font-size: 14px;
